using bootstrap container in main login.jade + firefox fix for vertical alignment :)

--- a/src/less/login.less
+++ b/src/less/login.less
@@ -27,14 +27,6 @@
 	text-rendering: optimizelegibility;
 	-moz-osx-font-smoothing: grayscale;
 
-	&.logged-in{
-		.pos-abs();
-		top: 0;
-		bottom: 0;
-		right: 0;
-		left: 0;
-	}
-
 	input[type=text], input[type=email], input[type=password], textarea, .btn, .checkbox label:before{
 		border-radius: 2px;
 		background: @lava-login-gray-dark;
